# shelob_syropod

./: CMakeLists.txt  package.xml
config/: auto_pose.yaml  controller_config.yaml  gait.yaml  shelob.yaml  shelob_gazebo_controllers.yaml  shelob_motors.yaml
launch/: display.launch  dynamixel_controller_manager.launch  dynamixel_controller_spawner.launch  shelob_gazebo.launch  shelob_hardware.launch  shelob_highlevel.launch  shelob_log.launch  shelob_start.launch
meshes/: Abdomen_Link.STL  Femur_Link.STL
robot/: shelob_syropod (copy).urdf  shelob_syropod.urdf
rviz/: urdf.rviz
