<?xml version="1.0"?>
<package format="3">

  <name>shelob_syropod</name>
  <version>0.1.0</version>
  <description>The shelob_syropod package</description>

  <maintainer email="shc-support@csiro.au"></maintainer>

  <license>CSIRO Open Source Software Licence Agreement (Ref: LICENSE file)</license>

  <buildtool_depend>catkin</buildtool_depend>
    <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo_ros</depend>
  

</package>
